<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nukkitx.protocol</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <version>2.6.1-SNAPSHOT</version>
    <name>Protocol Parent</name>
    <description>A protocol library for Minecraft</description>
    <url>https://github.com/NukkitX/Protocol</url>
    <inceptionYear>2018</inceptionYear>

    <modules>
        <module>common</module>
        <module>bedrock</module>
        <module>java</module>
    </modules>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>NukkitX</name>
        <url>https://github.com/NukkitX</url>
    </organization>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/NukkitX/Protocol/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Jenkins</system>
        <url>https://ci.nukkitx.com/job/NukkitX/job/Protocol</url>
    </ciManagement>

    <scm>
        <connection>scm:git:https://github.com/NukkitX/Protocol.git</connection>
        <developerConnection>scm:git:git@github.com:NukkitX/Protocol.git</developerConnection>
        <url>https://github.com/NukkitX/Protocol</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>opencollab-releases</name>
            <url>https://repo.opencollab.dev/release</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>nukkitx-snapshots</name>
            <url>https://repo.opencollab.dev/snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>HHmm-ddMMyyyy</maven.build.timestamp.format>
        <network.version>1.6.23</network.version>
    </properties>

    <repositories>
        <repository>
            <id>opencollab-repo-release</id>
            <url>https://repo.opencollab.dev/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>opencollab-repo-snapshot</id>
            <url>https://repo.opencollab.dev/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sonatype-oss</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.10</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.4.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.4.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <links>
                        <link>https://netty.io/4.1/api</link>
                        <link>https://ci.nukkitx.com/job/NukkitX/job/math/job/master/javadoc</link>
                    </links>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>